# Generated by Django 6.0 on 2026-01-22 18:34

import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=128)),
                ('description', models.TextField()),
                ('creation_timestamp', models.DateTimeField(auto_now_add=True)),
                ('is_sent_email', models.BooleanField(default=False)),
                ('is_sent_phone', models.BooleanField(default=False)),
                ('is_read', models.BooleanField(default=False)),
            ],
            options={
                'verbose_name': 'notification',
                'verbose_name_plural': 'notifications',
            },
        ),
    ]
