@startuml Speech Therapy Office Management System (sTOMs)

hide empty methods
hide circle




'---------------
' Profiles
'---------------

class User {
    id : uuid
--
    first_name : varchar(64)
    surname : varchar(64)
    email : varchar(256) <<UNIQUE>>
    phone_number : text
    password_hash : varchar(64)
    role : enum [KLIENT, TERAPEUTA]
    is_verified : boolean
    is_active : boolean
}


class Therapist {
    id : uuid
--
    user_id : uuid <<FK>>
    office_id : uuid <<FK>>
}
note left of Therapist
Każdy terapeuta ma przydzielony własny gabinet
endnote

class Patient {
    id : uuid
--
    user_id : uuid <<FK>>
    name : varchar(64)
    surname : varchar(64) 
    birthday : date
}
note right
Jeden użytkownik może mieć przypisanych wielu pacjentów
opcja ta przydatna jest dla rodziców chcących zapisać 
więcej niż jedno dziecko na zajęcia.
endnote

User "1" -- "1" Therapist : is_a
User "1" -- "1..*" Patient : controls


'---------------
' Offices
'---------------

class Office {
    id : uuid
--
    localization : varchar(128)
    room : varchar(32)
}

Therapist "1" -- "1" Office : operates_in

'---------------
' Notifications
'---------------


class Notification{
    id : uuid
--
    name : varchar(128)
    description : text
    creation_date : date
    is_read : boolean
}

User "1" -- "0..*" Notification : receives

'---------------
' Therapy and Scheduling
'---------------


class AvailabilityBlock {
    id : uuid
--
    therapist_id : uuid <<FK>>
    day_of_week : int [0-6] <<NULLable>>
    specific_date : date <<NULLable>>
    start_time : time
    end_time : time
    type : enum [BASE, INCLUSION, EXCLUSION]
}
note bottom
Jedna tabela na grafik bazowy (BASE + day_of_week)
i na urlopy/zmiany (INCLUSION/EXCLUSION + specific_date).
endnote

class AppointmentTypes {
    id : uuid
--
    name : varchar(100)
    duration_time_minutes : int
    price : numeric(5,2)
    is_periodic : boolean
}



class AppointmentSeries {
    id : uuid
--
    therapist_id : uuid <<FK>>
    patient_id : uuid <<FK>>
    appointment_type_id : uuid <<FK>>
    start_time : time
    end_time : times
    recurrence : recurrence_field
    status : [ACTIVE, ENDED, CANCELED]
}
note right of AppointmentSeries::recurrence
recurrence_field odnosi się do atrybutu RecurrenceField
udostępnianego przez bibliotekę django-recurrence
która ułatwia pracę z powtarzającymi się datami
endnote


class Appointment {
    id : uuid
--
    patient_id : uuid <<FK>>
    therapist_id : uuid <<FK>>
    appointment_series_id : uuid <<FK>>
    appointment_date : date
    status : enum [SCHEDULED, COMPLETED, CANCELED]
    final_price : numeric(5,2)
    notes : text <<NULLable>>
}
note left of Appointment
Wizyty mogą być rezerwowane na czas nieokreślony,
oznacza to, że wpisy do tabeli Appointmet generowane będą leniwie
według ustawień systemu
endnote

Therapist "1" -- "0..*" AvailabilityBlock : specifies availability
Patient "1" -- "0..*" Appointment
Therapist "1" -- "0..*" Appointment
Patient "1" -- "0..*" AppointmentSeries : books
Therapist "1" -- "0..*" AppointmentSeries : conducts
AppointmentTypes "1" -- "0..*" AppointmentSeries : defines type
AppointmentSeries "1" -- "1..*" Appointment : composed of


'---------------
' Home Assignments
'---------------

class Exercise {
    id : uuid
--
    title : varchar(255)
    instructions : text
    created_by_id : uuid <<FK>>
}



class Homework {
    id : uuid
--
    exercise_id : uuid <<FK>>
    patient_id : uuid <<FK>>
    therapist_id : uuid<<FK>>
    exercise_id : uuid<<FK>>
    is_completed : boolean
    completion_timestamp : datetime

}

Therapist "1" -- "0..*" Homework : creates
Patient "1" -- "0..*" Homework : receives
Exercise "1" -- "0..*" Homework : includes

@enduml
